--- a/login.html
+++ b/login.html
@@ -12,112 +12,105 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background: #f9f9f9;
+            background: #f0f2f5;
             display: flex;
             justify-content: center;
             align-items: center;
             font-family: 'Segoe UI', sans-serif;
+            flex-direction: column;
         }
 
         .login-container {
             background: white;
             padding: 40px 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            width: 320px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            border-radius: 12px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
+            width: 100%;
+            max-width: 380px;
+            text-align: center;
         }
 
         .app-title {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
             color: #333;
-            margin-bottom: 30px;
+            margin-bottom: 25px;
             letter-spacing: 0.5px;
         }
 
         input[type="text"], input[type="password"] {
             width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 14px;
-            transition: border 0.3s ease;
+            padding: 14px;
+            margin: 12px 0;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 15px;
         }
 
-        input[type="text"]:focus, input[type="password"]:focus {
-            border-color: #333;
+        input:focus {
+            border-color: #007bff;
             outline: none;
         }
 
         button {
             width: 100%;
-            padding: 12px;
-            background: #333;
+            padding: 14px;
+            background-color: #007bff;
             color: white;
-            border: none;
-            border-radius: 6px;
+            font-size: 16px;
             font-weight: bold;
+            border: none;
+            border-radius: 8px;
+            margin-top: 20px;
             cursor: pointer;
-            margin-top: 15px;
             transition: background 0.3s ease;
         }
 
         button:hover {
-            background: #000;
+            background-color: #0056b3;
         }
 
         .flash {
             color: #e74c3c;
             margin-bottom: 10px;
-            font-size: 13px;
-            text-align: center;
+            font-size: 14px;
         }
 
         .footer-text {
-            margin-top: 20px;
+            margin-top: 30px;
             font-size: 12px;
             color: #aaa;
         }
+
         .link {
             margin-top: 20px;
             font-size: 14px;
-            color: #666;
-            text-align: center;
-        }
-
-        .link span {
-            margin-right: 5px;
+            color: #555;
         }
 
         .link a {
-            color: #333;
+            color: #007bff;
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 600;
             border-bottom: 1px solid transparent;
-            transition: border-color 0.3s ease, color 0.3s ease;
         }
 
         .link a:hover {
-            color: #000;
-            border-color: #000;
-    }
-
+            border-color: #007bff;
+        }
     </style>
 </head>
 <body>
+
     <div class="login-container">
         <div class="app-title">FixMySched</div>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            {% for category, message in messages %}
-              <div class="flash">{{ message }}</div>
-            {% endfor %}
-          {% endif %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="flash">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
         {% endwith %}
 
         <form method="POST">
@@ -126,13 +119,14 @@
             <button type="submit">Login</button>
         </form>
 
+        <div class="link">
+            Don't have an account?
+            <a href="{{ url_for('register') }}">Register here</a>
+        </div>
+
         <div class="footer-text">
             © 2025 FixMySched
         </div>
-    </div>
-    <div class="link">
-       <span>Don't have an account?</span>
-       <a href="{{ url_for('register') }}">Register here</a>
     </div>
 
 </body>
