--- a/register.html
+++ b/register.html
@@ -7,79 +7,110 @@
         * {
             box-sizing: border-box;
         }
+
         body {
             margin: 0;
             padding: 0;
             height: 100vh;
-            background: #f9f9f9;
+            background: #f0f2f5;
             display: flex;
             justify-content: center;
             align-items: center;
             font-family: 'Segoe UI', sans-serif;
         }
+
         .register-container {
             background: white;
-            padding: 40px 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            width: 320px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            padding: 40px;
+            border-radius: 14px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 460px;
         }
+
         .app-title {
-            font-size: 24px;
+            text-align: center;
+            font-size: 26px;
             font-weight: bold;
             color: #333;
             margin-bottom: 30px;
-            letter-spacing: 0.5px;
         }
-        input[type="text"], input[type="password"] {
-            width: 100%;
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        input[type="text"],
+        input[type="password"],
+        input[type="email"],
+        input[type="file"],
+        select,
+        textarea {
             padding: 12px;
             margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
             font-size: 14px;
-            transition: border 0.3s ease;
         }
-        input[type="text"]:focus, input[type="password"]:focus {
-            border-color: #333;
+
+        textarea {
+            resize: vertical;
+            min-height: 80px;
+        }
+
+        select {
+            appearance: none;
+        }
+
+        input:focus,
+        select:focus,
+        textarea:focus {
+            border-color: #007bff;
             outline: none;
         }
+
         button {
-            width: 100%;
-            padding: 12px;
-            background: #333;
+            margin-top: 18px;
+            padding: 14px;
+            background: #007bff;
             color: white;
+            font-size: 15px;
+            font-weight: 600;
             border: none;
-            border-radius: 6px;
-            font-weight: bold;
+            border-radius: 8px;
             cursor: pointer;
-            margin-top: 15px;
             transition: background 0.3s ease;
         }
+
         button:hover {
-            background: #000;
+            background: #0056b3;
         }
+
         .flash {
             color: #e74c3c;
             margin-bottom: 10px;
             font-size: 13px;
             text-align: center;
         }
+
+        .link {
+            margin-top: 20px;
+            font-size: 13px;
+            text-align: center;
+        }
+
+        .link a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
         .footer-text {
             margin-top: 20px;
             font-size: 12px;
             color: #aaa;
-        }
-        .link {
-            margin-top: 15px;
-            font-size: 13px;
-        }
-        .link a {
-            color: #333;
-            text-decoration: none;
+            text-align: center;
         }
     </style>
 </head>
@@ -95,11 +126,33 @@
           {% endif %}
         {% endwith %}
 
-        <form method="POST">
-            <input type="text" name="username" placeholder="Choose a username" required>
-            <input type="password" name="password" placeholder="Choose a password" required>
-            <button type="submit">Register</button>
-        </form>
+       <form method="POST" enctype="multipart/form-data">
+    <input type="text" name="username" placeholder="Choose a username" required>
+    <input type="password" name="password" placeholder="Choose a password" required>
+    <input type="text" name="full_name" placeholder="Full Name" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="text" name="phone" placeholder="Phone Number" required>
+
+    <select name="department" required>
+        <option value="" disabled selected>Select Department</option>
+        <option value="Surgery">Surgery</option>
+        <option value="Pediatrics">Pediatrics</option>
+        <option value="Radiology">Radiology</option>
+        <option value="Emergency">Emergency</option>
+    </select>
+
+    <textarea name="address" placeholder="Address" required></textarea>
+    <input type="file" name="photo" accept="image/*">
+
+    <!-- Register as Admin Checkbox -->
+    <label style="margin-top: 10px;">
+        <input type="checkbox" name="is_admin">
+        Register as Admin
+    </label>
+
+    <button type="submit">Register</button>
+</form>
+
 
         <div class="link">
             Already have an account? <a href="{{ url_for('login') }}">Login here</a>
@@ -108,6 +161,3 @@
         <div class="footer-text">
             © 2025 FixMySched
         </div>
-    </div>
-</body>
-</html>
