--- a/register.html
+++ b/register.html
@@ -139,6 +139,8 @@
         <option value="Pediatrics">Pediatrics</option>
         <option value="Radiology">Radiology</option>
         <option value="Emergency">Emergency</option>
+        <option value="Neurology">Neurology</option>
+        <option value="Cardiology">Cardiology</option>
     </select>
 
     <textarea name="address" placeholder="Address" required></textarea>
