--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -92,20 +92,35 @@
             </tr>
         </thead>
         <tbody>
-            {% for user in employees %}
-            <tr>
-                <td>{{ user[0] }}</td>
-                <td>{{ user[1] }}</td>
-                <td>{{ user[2] }}</td>
-                <td class="action-buttons">
-                    <a href="{{ url_for('profile') }}?username={{ user[0] }}">View Profile</a>
-                    <form action="{{ url_for('delete_user', username=user[0]) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
-                        <button type="submit" class="delete-button">Delete</button>
-                    </form>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
+    {% for user in employees %}
+    <tr>
+        <td>{{ user['username'] }}</td>
+        <td>{{ user['full_name'] }}</td>
+        <td>{{ user['department'] }}</td>
+
+        <td class="action-buttons">
+            <!-- View Profile -->
+            <a href="{{ url_for('view_profile', username=user['username']) }}">View Profile</a>
+
+            <!-- Add Shift -->
+            <a href="{{ url_for('admin_add_shift_for_user', username=user['username']) }}">Add Shift</a>
+
+            <!-- Edit Profile -->
+            <a href="{{ url_for('admin_edit_profile', username=user['username']) }}">Edit Profile</a>
+
+            <!-- Delete User -->
+            <form action="{{ url_for('delete_user', username=user['username']) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');">
+                <button type="submit" class="delete-button">Delete</button>
+            </form>
+            <form action="{{ url_for('auto_allocate_shifts') }}" method="post">
+                <button type="submit" class="button">Auto Allocate Shifts</button>
+            </form>
+
+        </td>
+    </tr>
+    {% endfor %}
+</tbody>
+
     </table>
 
     <a href="{{ url_for('admin_schedules') }}" class="button">View All Schedules</a>
