--- a/edit_profile.html
+++ b/edit_profile.html
@@ -77,17 +77,17 @@
     <div class="form-container">
         <h2>Edit Profile</h2>
         <form method="POST" enctype="multipart/form-data">
-            <input type="text" name="full_name" placeholder="Full Name" value="{{ user[0] }}" required>
-            <input type="email" name="email" placeholder="Email" value="{{ user[1] }}" required>
-            <input type="text" name="phone" placeholder="Phone" value="{{ user[2] }}" required>
+            <input type="text" name="full_name" placeholder="Full Name" value="{{ user['full_name'] }}" required>
+            <input type="email" name="email" placeholder="Email" value="{{ user['email'] }}" required>
+            <input type="text" name="phone" placeholder="Phone" value="{{ user['phone'] }}" required>
             <select name="department" required>
                 <option value="">Select Department</option>
-                <option value="Surgery" {% if user[3] == 'Surgery' %}selected{% endif %}>Surgery</option>
-                <option value="Pediatrics" {% if user[3] == 'Pediatrics' %}selected{% endif %}>Pediatrics</option>
-                <option value="Radiology" {% if user[3] == 'Radiology' %}selected{% endif %}>Radiology</option>
-                <option value="Emergency" {% if user[3] == 'Emergency' %}selected{% endif %}>Emergency</option>
+                <option value="Surgery" {% if user['department'] == 'Surgery' %}selected{% endif %}>Surgery</option>
+                <option value="Pediatrics" {% if user['department'] == 'Pediatrics' %}selected{% endif %}>Pediatrics</option>
+                <option value="Radiology" {% if user['department'] == 'Radiology' %}selected{% endif %}>Radiology</option>
+                <option value="Emergency" {% if user['department'] == 'Emergency' %}selected{% endif %}>Emergency</option>
             </select>
-            <textarea name="address" placeholder="Address" required>{{ user[4] }}</textarea>
+            <textarea name="address" placeholder="Address" required>{{ user['address'] }}</textarea>
             <input type="file" name="photo" accept="image/*">
             <button type="submit">Update Profile</button>
         </form>
