--- a/schedule.html
+++ b/schedule.html
@@ -73,9 +73,11 @@
 <div class="container">
     <h2>Your Shift Schedule</h2>
 
+    {% if session.get('is_admin') %}
     <div class="add-button">
-        <a href="{{ url_for('add_shift') }}">+ Add New Shift</a>
+        <a href="{{ url_for('admin_add_shift') }}">+ Add New Shift</a>
     </div>
+    {% endif %}
 
     {% if schedule %}
     <table>
@@ -85,7 +87,9 @@
             <th>Shift Time</th>
             <th>Department</th>
             <th>Notes</th>
+            {% if session.get('is_admin') %}
             <th>Actions</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
@@ -95,11 +99,13 @@
             <td>{{ shift[2] }}</td>
             <td>{{ shift[3] }}</td>
             <td>{{ shift[4] or '-' }}</td>
+            {% if session.get('is_admin') %}
             <td class="action-links">
                 <a href="{{ url_for('edit_shift', shift_id=shift[0]) }}">Edit</a>
                 <a href="{{ url_for('delete_shift', shift_id=shift[0]) }}" onclick="return confirm('Are you sure you want to delete this shift?');">Delete</a>
                 <a href="{{ url_for('mark_unavailable', shift_id=shift[0]) }}">Mark Absent</a>
             </td>
+            {% endif %}
         </tr>
         {% endfor %}
         </tbody>
